# aoc2024

./: .gitignore  Cargo.toml  justfile
day01/: Cargo.toml
day01/benches/: benchmarks.rs
day01/src/: p1.rs  p2.rs
day1/: Cargo.toml
day1/src/: main.rs
template/: Cargo.toml
template/benches/: benchmarks.rs
template/src/: p1.rs  p2.rs
zig/day01/src/: main.zig  p1.zig  p2.zig
