[package]
name = "day01"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
indoc.workspace = true
itertools.workspace = true
miette.workspace = true
nom.workspace = true
tracing-subscriber.workspace = true
tracing.workspace = true

[dev-dependencies]
divan.workspace = true

[[bench]]
name = "day01-bench"
path = "benches/benchmarks.rs"
harness = false
